# vuda

./: .cmake-format  .gitignore  CMakeLists.txt  README.md  mac_common.cmake
cmake/: FindMoltenVK.cmake
inc/: vuda.hpp  vuda_runtime.hpp
inc/api/: devicemgr.hpp  eventmgr.hpp  memmgr.hpp  streammgr.hpp  vudakernel.hpp
inc/setup/: debug.hpp  debugkernel.hpp  setup.hpp  types.hpp
inc/state/: binarysearchtree.hpp  event.hpp  instance.hpp  interfacelogicaldevices.hpp  kernellaunchinfo.hpp  kernelprogram.hpp  kernelprogram.inl  logicaldevice.hpp  logicaldevice.inl  memoryallocator.hpp  node_cached.hpp  node_device.hpp  node_host.hpp  node_internal.hpp  node_storage.hpp  pool.hpp  singleton.hpp  specialization.hpp  thrdcmdpool.hpp  threadinfo.hpp  virtualalloc.hpp  vulkanfunc.hpp
samples/: CMakeLists.txt
samples/bandwidthtest/: CMakeLists.txt  bandwidthtest.cpp
samples/device_query/: CMakeLists.txt  device_query.cpp
samples/embedded_kernel/: CMakeLists.txt  embedded_kernel.cpp  kernel.spv.h
samples/events_and_bandwidth/: CMakeLists.txt  events_and_bandwidth.cpp
samples/julia_set/: CMakeLists.txt  julia_kernel.comp  julia_set.cpp  miniz.c  miniz.h
samples/shared_memory/: CMakeLists.txt  glslDynamicReverse.comp  glslStaticReverse.comp  shared_memory.cpp  shared_memory.cu
samples/simple/: CMakeLists.txt  add.comp  add.spv  simple.cpp
samples/specializedkernels/: CMakeLists.txt  specializedkernels.cpp  threadid.comp
samples/threads_and_streams/: CMake.txt  CMakeLIsts.txt  CMakeLists.txt  threads_and_streams.cpp
samples/tools/: safecall.hpp  timer.hpp
