#
# CMakeLists.txt
#

CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(vuda LANGUAGES CXX)

IF(APPLE)
    SET(MOLTENVK_REPO_ROOT "MOLTENVK-NOTFOUND" CACHE PATH "Absolute path to a MoltenVK repo directory")
    IF(NOT MOLTENVK_REPO_ROOT AND NOT DEFINED ENV{MOLTENVK_REPO_ROOT})
        MESSAGE(FATAL_ERROR "Must define location of MoltenVK repo")
    ENDIF()
    IF(NOT MOLTENVK_REPO_ROOT)
        SET(MOLTENVK_REPO_ROOT $ENV{MOLTENVK_REPO_ROOT})
    ENDIF()
    MESSAGE(STATUS "Using MoltenVK repo location at ${MOLTENVK_REPO_ROOT}")
ENDIF()
MESSAGE(STATUS "Using find_package to locate Vulkan")

FIND_PACKAGE(Vulkan)

# "Vulkan::Vulkan" on macOS causes the framework to be linked to the app instead of an individual library
SET(LIBVK "Vulkan::Vulkan")
MESSAGE(STATUS "Vulkan FOUND = ${Vulkan_FOUND}")
MESSAGE(STATUS "Vulkan Lib = ${Vulkan_LIBRARY}")
MESSAGE(STATUS "Vulkan Headers Include = ${Vulkan_INCLUDE_DIR}")

IF(APPLE)
    INCLUDE(mac_common.cmake)
ENDIF()

IF(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    ADD_DEFINITIONS(-DVK_USE_PLATFORM_MACOS_MVK)
ENDIF()

INCLUDE_DIRECTORIES(${Vulkan_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/inc)

SET(CMAKE_OBJECT_PATH_MAX 200)

SET(CMAKE_USE_RELATIVE_PATHS TRUE)

SET(CMAKE_SKIP_BUILD_RPATH FALSE)

SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)

SET(CMAKE_CXX_EXTENSIONS ON)

SET(CMAKE_CXX_STANDARD 17)

SET(CMAKE_CXX_STANDARD_REQUIRED TRUE)

SET(CMAKE_CUDA_STANDARD 14)

SET(CMAKE_CUDA_STANDARD_REQUIRED TRUE)

SET(CMAKE_POSITION_INDEPENDENT_CODE ON)

LINK_LIBRARIES(${Vulkan_LIBRARY})

ADD_SUBDIRECTORY(samples)
