#
# CMakeLists.txt
#

CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(vuda LANGUAGES CXX C)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")

FIND_PACKAGE(Vulkan)

IF(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    ADD_DEFINITIONS(-DVK_USE_PLATFORM_MACOS_MVK)
ENDIF()

SET(LIBS ${Vulkan_LIBRARIES})
SET(INCLUDES ${Vulkan_INCLUDE_DIR})

SET(CMAKE_OBJECT_PATH_MAX 200)

SET(CMAKE_USE_RELATIVE_PATHS TRUE)

SET(CMAKE_SKIP_BUILD_RPATH FALSE)

SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)

SET(CMAKE_CXX_EXTENSIONS ON)

SET(CMAKE_CXX_STANDARD 17)

SET(CMAKE_CXX_STANDARD_REQUIRED TRUE)

SET(CMAKE_CUDA_STANDARD 14)

SET(CMAKE_CUDA_STANDARD_REQUIRED TRUE)

SET(CMAKE_POSITION_INDEPENDENT_CODE ON)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/inc)

INCLUDE_DIRECTORIES(${INCLUDES})

LINK_LIBRARIES(${LIBS})

ADD_SUBDIRECTORY(samples)
