#
# CMakeLists.txt
#

ADD_SUBDIRECTORY(simple)

ADD_SUBDIRECTORY(shared_memory)

ADD_SUBDIRECTORY(specializedkernels)

ADD_SUBDIRECTORY(threads_and_streams)

ADD_SUBDIRECTORY(julia_set)

ADD_SUBDIRECTORY(events_and_bandwidth)

ADD_SUBDIRECTORY(device_query)

ADD_SUBDIRECTORY(embedded_kernel)

ADD_SUBDIRECTORY(bandwidthtest)
