#
# CMakeLists.txt
#

SET(BINARY_DIR ${CMAKE_BINARY_DIR})
SET(SHADER_DIR ${CMAKE_CURRENT_SOURCE_DIR})
FILE(GLOB SHADERS ${SHADER_DIR}/*.comp)

SET(SPV_SHADERS)

FOREACH(SHADER IN LISTS SHADERS)
    GET_FILENAME_COMPONENT(FILENAME ${SHADER} NAME_WE)
    ADD_CUSTOM_COMMAND(
        OUTPUT ${BINARY_DIR}/${FILENAME}.spv
        COMMAND ${Vulkan_GLSLC_EXECUTABLE} ${SHADER} -o ${BINARY_DIR}/${FILENAME}.spv
        DEPENDS ${SHADER}
        COMMENT "Compiling ${FILENAME}"
    )
    LIST(APPEND SPV_SHADERS ${BINARY_DIR}/${FILENAME}.spv)
ENDFOREACH()

ADD_CUSTOM_TARGET(shaders_julia_set ALL DEPENDS ${SPV_SHADERS})
ADD_EXECUTABLE(julia_set julia_set.cpp;miniz.c ${SHADERS})
ADD_DEPENDENCIES(julia_set shaders_julia_set)
