#
# CMakeLists.txt
#

SET(BINARY_DIR ${CMAKE_BINARY_DIR})
SET(SHADER_DIR ${CMAKE_CURRENT_SOURCE_DIR})
FILE(GLOB SHADERS ${SHADER_DIR}/*.comp)

SET(SPV_SHADERS)

FOREACH(SHADER IN LISTS SHADERS)
    GET_FILENAME_COMPONENT(FILENAME ${SHADER} NAME_WE)
    ADD_CUSTOM_COMMAND(
        OUTPUT ${BINARY_DIR}/${FILENAME}.spv
        COMMAND ${Vulkan_GLSLC_EXECUTABLE} ${SHADER} -o ${BINARY_DIR}/${FILENAME}.spv
        DEPENDS ${SHADER}
        COMMENT "Compiling ${FILENAME}"
    )
    LIST(APPEND SPV_SHADERS ${BINARY_DIR}/${FILENAME}.spv)
ENDFOREACH()

IF(NO_CUDA)
    ADD_CUSTOM_TARGET(shaders_shared_memory ALL DEPENDS ${SPV_SHADERS})
    ADD_EXECUTABLE(shared_memory shared_memory.cpp ${SHADERS})
    ADD_DEPENDENCIES(shared_memory shaders_shared_memory)
ELSE()
    SET_SOURCE_FILES_PROPERTIES(shared_memory.cpp PROPERTIES LANGUAGE CUDA)
    ADD_EXECUTABLE(shared_memory shared_memory.cpp shared_memory.cu)
ENDIF()

ADD_TEST(
    NAME shared_memory
    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/shared_memory
    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
)
