#
# CMakeLists.txt
#

SET(SHADER_DIR ${CMAKE_CURRENT_SOURCE_DIR})
FILE(GLOB SHADERS ${SHADER_DIR}/*.comp)

SET(SPV_SHADERS)

FOREACH(SHADER IN LISTS SHADERS)
    GET_FILENAME_COMPONENT(FILENAME ${SHADER} NAME_WE)
    ADD_CUSTOM_COMMAND(
        OUTPUT ${SHADER_DIR}/${FILENAME}.spv
        COMMAND ${Vulkan_GLSLC_EXECUTABLE} ${SHADER} -o ${SHADER_DIR}/${FILENAME}.spv
        DEPENDS ${SHADER}
        COMMENT "Compiling ${FILENAME}"
    )
    LIST(APPEND SPV_SHADERS ${SHADER_DIR}/${FILENAME}.spv)
ENDFOREACH()

ADD_CUSTOM_TARGET(shaders ALL DEPENDS ${SPV_SHADERS})
ADD_EXECUTABLE(simple simple.cpp ${SHADERS})
ADD_DEPENDENCIES(simple shaders)
